bin/tests/errors_sema/sema/sema_err_break_outside_breakable.swg
#global fileprivate

#test
{
    break // swc-expected-error {{sema_err_break_outside_breakable}}
}
